--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 certifi==2017.11.5
 chardet==3.0.4
-click==6.7
+charset-normalizer==2.0.11
+click==8.0.3
 idna==2.6
-requests==2.20.0
+requests==2.27.1
 six==1.11.0
-slack-sansio==0.3.2
+slack-sansio==1.1.0
 urllib3==1.26.5
 websocket-client==0.46.0
